Prepare for Java 8 release.